--- a/Help/2. Loading Data/2.2 Entering Query Genes.html
+++ b/Help/2. Loading Data/2.2 Entering Query Genes.html
@@ -22,7 +22,7 @@ They must be gene symbols.
 <h2>Background genes</h2>
 <p>
 By default all the genes in the genome (is this all that are in the gmt file??) are used as the background set.
-This is not usually the most appropriate set. 
+Depending on the experiment that the gene set was derived from, this may or may not be the most appropriate set of background genes. 
 Custom background genes can be entered by changing the dropdown box from 'Use all genes in genome' 
 to 'Enter custom background genes'. The background genes can then be pasted in. Again, these must be gene symbols.  
 </p>
@@ -33,12 +33,10 @@ The p-value can be adjusted before the data is loaded - this may be preferable i
 significant categories. It can be adjusted further once the data has been loaded and processed. For more details on 
 the p-value see the help page p-value help....
 <h3>Number of genes in functional category</h3>
-This refers to the processing of the gmt file. The functional categories can contain as few as 1 gene or many thousands of genes. 
-At the extremes these categories aren't very useful so it is preferable to filter these out.
+This refers to the total number of genes contained within a functional category. 
+Some of the categories are very broad and refer to generic biological processes; these will often contain many hundreds or thousands of genes.
+Other functional categories can be very specific and contain as few members as 1 gene. At the extremes these categories aren't very useful so it is preferable to filter these out.
 
 </body>
 </html>
-
-
-
 
