--- a/Help/2. Loading Data/2.2 Entering Query Genes.html
+++ b/Help/2. Loading Data/2.2 Entering Query Genes.html
@@ -21,7 +21,7 @@ They must be gene symbols.
 <br>
 <h2>Background genes</h2>
 <p>
-By default all the genes in the genome (is this all that are in the gmt file??) are used as the background set.
+By default all the genes in the genome (from a gtf file) are used as the background set.
 Depending on the experiment that the gene set was derived from, this may or may not be the most appropriate set of background genes. 
 Custom background genes can be entered by changing the dropdown box from 'Use all genes in genome' 
 to 'Enter custom background genes'. The background genes can then be pasted in. Again, these must be gene symbols.  
@@ -30,8 +30,7 @@ to 'Enter custom background genes'. The background genes can then be pasted in. 
 <h2>Setting options</h2>
 <h3>p-value</h3>
 The p-value can be adjusted before the data is loaded - this may be preferable if the data produces a large number of 
-significant categories. It can be adjusted further once the data has been loaded and processed. For more details on 
-the p-value see the help page p-value help....
+significant categories. It can be adjusted further once the data has been loaded and processed. 
 <h3>Number of genes in functional category</h3>
 This refers to the total number of genes contained within a functional category. 
 Some of the categories are very broad and refer to generic biological processes; these will often contain many hundreds or thousands of genes.
