--- a/Help/2. Loading Data/2.2 Entering Query Genes.html
+++ b/Help/2. Loading Data/2.2 Entering Query Genes.html
@@ -15,8 +15,7 @@
 <h1>Entering a list of genes</h1>
 <h2>Query genes</h2>
 <p>
-A list of genes can be pasted in to the query gene field.
-They must be gene symbols. 
+A list of human or mouse genes symbols can be pasted in to the query gene field.
 </p>
 <br>
 <h2>Background genes</h2>
