--- a/Help/2. Loading Data/2.2 Entering Query Genes.html
+++ b/Help/2. Loading Data/2.2 Entering Query Genes.html
@@ -26,13 +26,9 @@ Custom background genes can be entered by changing the dropdown box from 'Use al
 to 'Enter custom background genes'. The background genes can then be pasted in. Again, these must be gene symbols.  
 </p>
 <br>
-<h2>Statistical test</h2>
-To test for enrichment of the set of query genes in the functional categories, a Fisher's Exact test is performed for each category.
-A Benjamini-Hochberg multiple testing correction is applied. Further reference to p-values refers to the B-H corrected p-values. 
-
 <h2>Setting options</h2>
 <h3>p-value</h3>
-The p-value threshold can be adjusted before the data is processed - this may be preferable if the data produces a large number of 
+The p-value can be adjusted before the data is loaded - this may be preferable if the data produces a large number of 
 significant categories. It can be adjusted further once the data has been loaded and processed. 
 <h3>Number of genes in functional category</h3>
 This refers to the total number of genes contained within a functional category. 
